# ur10-robotic-arm-mud-shoveling-experiment-part

./: .gitignore  README.md
OMPL源码使用教程/: MoveIt_OMPL_源码覆盖调用与验证教程.md
data/: latest_obstacle.pcd
docs/: 01_build_and_rebuild_guide.md  02_workspace_structure.md  03_runbook.md  04_nodes_and_launches.md  05_code_walkthrough.md  06_motion_planning_and_obstacle_avoidance.md  07_ros2_getting_started.md  08_real_robot_ethernet_and_driver.md  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur10_examples_py/share/ur10_examples_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: Algo_DP_RRT_3D.m  README.md  test_shovel_tcp.py  ur10_shovel.urdf  ur10_shovel_end_effector_analysis.md
src/FT300/ft300_gui_ros2/: README.md  package.xml  setup.cfg  setup.py
src/FT300/ft300_gui_ros2/config/: ft300_gui_params.yaml
src/FT300/ft300_gui_ros2/ft300_gui_ros2/: ft300_gui_node.py
src/FT300/ft300_gui_ros2/launch/: ft300_gui.launch.py
src/docs/: README.md
src/docs/gazebo_显示与启动修复备忘/: 00_总览.md  01_问题现象与根因总表.md  02_Gazebo_为什么显示不出来.md  03_这次实际改了什么.md  04_进程干扰_服务干扰_为什么会误判.md  05_新手排查流程.md  06_最终验证与常见非致命日志.md  README.md
src/docs/my_robot_gantry_build_notes/: 00_总览.md  01_本次新增与修改文件说明.md  02_龙门架是怎么构建的.md  03_为什么要用_RViz2_和_Gazebo_联动.md  04_如何通过调整龙门架来调整机械臂末端基座位置.md  05_启动、验证与常见现象.md
src/docs/工作区功能包分析/: 00_总览.md  (+11 more)
src/learn_docs/: README.md  编译基础.md
src/my_robot_moveit_config/: CMakeLists.txt  package.xml
src/my_robot_xacro/my_robot/: CMakeLists.txt  my_robot.urdf.xacro  package.xml
src/my_robot_xacro/my_robot/config/: gantry_config.json  ros2_controllers.yaml
src/my_robot_xacro/my_robot/launch/: gazebo_gantry.launch.py  sim_planning_gantry.launch.py  view_my_robot.launch.py  view_my_robot_rviz.launch.py
src/my_robot_xacro/my_robot/meshes/: base_gazebo_visual.stl  base_link.STL  forearm_gazebo_visual.stl  shoulder_gazebo_visual.stl  upperarm_gazebo_visual.stl  wrist1_gazebo_visual.stl  wrist2_gazebo_visual.stl  wrist3_gazebo_visual.stl
src/my_robot_xacro/my_robot/rviz/: view_my_robot.rviz
src/my_robot_xacro/my_robot/scripts/: shovel_tcp_slider.py
src/my_robot_xacro/my_robot/urdf/: my_robot_gantry.urdf.xacro  my_robot_macro.urdf.xacro
src/robotiq_ft300_driver/: README.md  package.xml  setup.cfg  setup.py
src/ur10_bringup/: package.xml  setup.cfg  setup.py
src/ur10_bringup/launch/: full_system.launch.py  moveit_only.launch.py
src/ur10_bringup/resource/: ur10_bringup
src/ur10_bringup/ur10_bringup/: bucket_scene_node.py
src/ur10_description/: CMakeLists.txt
src/ur10_examples/: CMakeLists.txt
src/ur10_examples/src/: move_group_interface_demo.cpp
src/ur10_examples_py/: package.xml  setup.cfg  setup.py
src/ur10_ft300_monitor/: README.md  WORKFLOW_GUIDE.md  requirements.txt  run_gui.py
src/ur10_moveit_config/: CMakeLists.txt
src/ur10_perception/: CMakeLists.txt  package.xml
src/ur10_perception/config/: camera_topics.yaml
src/ur10_perception/launch/: perception_only.launch.py
src/ur10_perception/src/: pcd_capture_node.cpp  pcd_to_collision_scene_node.cpp  synthetic_overhead_camera_node.cpp
src/ur10_perception/urdf/: overhead_depth_camera.xacro
src/ur10_perception/worlds/: gantry_only.world  obstacle_scene.world
src/ur10_real_comm/: README.md  package.xml  setup.py
src/ur10_real_comm/config/: real_robot_network.yaml  verify.yaml
src/ur10_real_comm/launch/: real_comm_moveit_verify.launch.py
src/ur10_real_comm/scripts/: UR10_实机验证GUI使用说明.md  run_full_verify.sh  ur10_real_verify_gui.py
src/ur10_real_comm/ur10_real_comm/: motion_verify_node.py
src/ur10_realtime_monitor/: README.md  requirements.txt  run_gui.py  run_gui.sh
src/ur10_simulation_bringup/: CMakeLists.txt  package.xml
src/ur10_simulation_bringup/config/: netplan_ur10_pc.yaml.example  real_robot.env.example  real_robot_network.yaml
src/ur10_simulation_bringup/launch/: complete_simulation.launch.py  complete_simulation_with_shovel_trajectory.launch.py  demo_nodes.launch.py  gazebo_sim.launch.py  moveit_planning.launch.py  real_robot_driver.launch.py
src/ur10_trajectory_planner/: CMakeLists.txt  README.md  package.xml
src/ur10_trajectory_planner/action/: ExecuteShovelTask.action
src/ur10_trajectory_planner/config/: executor_params.yaml  planner_params.yaml  trajectory_params.yaml
src/ur10_trajectory_planner/include/ur10_trajectory_planner/: executor_adapter.hpp  executor_math.hpp  planner_adapter.hpp  planner_math.hpp  pose_builder.hpp  trajectory_fitter.hpp  trajectory_math.hpp  types.hpp
src/ur10_trajectory_planner/launch/: shovel_bucket_pipeline.launch.py
src/ur10_trajectory_planner/msg/: BucketFeatures.msg  ExecutionFeedback.msg  PlanInfo.msg  TargetPoseSeq.msg
src/ur10_trajectory_planner/scripts/: quick_test_pipeline.sh
src/ur10_trajectory_planner/src/: executor_adapter.cpp  executor_node.cpp  planner_adapter.cpp  planner_node.cpp  pose_builder.cpp  trajectory_fitter.cpp  trajectory_node.cpp
src/ur10_trajectory_planner/srv/: GenerateTrajectory.srv
src/ur10_trajectory_planner/test/: test_interface_smoke.cpp  test_pose_sequence.cpp  test_trajectory_math.cpp
src/ur10_unified_gui/: README.md  TEST_AND_USAGE.md  config_schema.py  main.py  package.xml  requirements.txt  setup.cfg  setup.py
src/ur10_unified_gui/launch/: gui.launch.py
src/ur10_unified_gui/resource/: ur10_unified_gui
src/ur10_unified_gui/tests/: test_unified_gui.py
src/ur10_unified_gui/ur10_unified_gui/: __init__.py  gui_node.py
src/ur10_with_shovel/: CMakeLists.txt  README.md  my_robot.urdf  package.xml
src/机械臂通信参考/: main_gui.py  ur_full_monitor.py
论文项目/: Markdown语法说明教学.md  UR10_龙门架铲斗系统_论文级技术说明.md  实验方案.docx  实验方案.md  本项目原理详细说明.md  本项目节点与调度详解.md
验证/shovel_tcp/: CMakeLists.txt  package.xml
验证/shovel_tcp/docs/task_logs/: 2026-04-29_standardize_ros2_package.md
验证/shovel_tcp/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
验证/shovel_tcp/meshes/: base_link.STL  shovel_tcp.STL
验证/shovel_tcp/urdf/: ur10_shovel_tool.urdf  ur10_shovel_tool_macro.xacro  末端夹持器.csv
(+219 files in other folders)
