<?xml version="1.0"?>
<package format="3">
  <name>ur10_bringup</name>
  <version>0.1.0</version>
  <description>Unified one-click bringup for gantry+UR10+bucket+planner+GUI.</description>
  <maintainer email="dev@example.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>my_robot</exec_depend>
  <exec_depend>my_robot_moveit_config</exec_depend>
  <exec_depend>ur10_trajectory_planner</exec_depend>
  <exec_depend>ur10_unified_gui</exec_depend>
  <exec_depend>ur10_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
