<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_real_comm</name>
  <version>0.1.0</version>
  <description>UR10 real-robot communication and MoveIt micro-move verification package.</description>

  <maintainer email="dev@example.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>python3-setuptools</build_depend>
  <build_export_depend>python3-setuptools</build_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ur10_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur10_description</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
