<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_simulation_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch package for UR10 Gazebo Classic and MoveIt 2 simulation.</description>

  <maintainer email="dev@example.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ur10_description</exec_depend>
  <exec_depend>ur10_examples</exec_depend>
  <exec_depend>ur10_examples_py</exec_depend>
  <exec_depend>ur10_moveit_config</exec_depend>
  <exec_depend>ur10_perception</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
