<?xml version="1.0"?>
<package format="3">
  <name>ur10_unified_gui</name>
  <version>0.2.0</version>
  <description>PyQt5 unified GUI for gantry+UR10 control, trajectory planning and execution.</description>
  <maintainer email="dev@example.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ur10_trajectory_planner</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
