<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ft300_gui_ros2</name>
  <version>0.1.0</version>
  <description>Integrated FT300 GUI for USB test, realtime visualization, ROS2 publishing, and session saving.</description>

  <maintainer email="dev@example.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>python3-setuptools</build_depend>
  <build_export_depend>python3-setuptools</build_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
